--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - pip install wheel
   - pip install coveralls
   - sudo apt-get update
-  - sudo apt-get install -y imagemagick ffmpeg
+  - sudo apt-get install -y libssl-dev openssl imagemagick ffmpeg
   - sudo rm /etc/ImageMagick/policy.xml
 
 
