--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
   - pip install -U pip
   - pip install wheel
   - pip install coveralls
+  - sudo apt-get install --reinstall ca-certificates -y
+  - sudo apt-add-repository ppa:mc3man/trusty-media -y
   - sudo apt-get update
   - sudo apt-get install -y libssl-dev openssl imagemagick ffmpeg
   - sudo rm /etc/ImageMagick/policy.xml
