--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,10 @@ pytest-cov==2.2.0
 # https://pypi.python.org/pypi/flake8/2.5.4
 flake8==2.5.4
 
+# SciPy: a ecosystem of open-source software for mathematics, science, and engineering.
+# https://pypi.python.org/pypi/scipy/0.18.0rc2
+scipy==0.18.0
+
 # Python video editing module: cuts, concatenations, custom effects
 # https://pypi.python.org/pypi/moviepy
 moviepy==0.2.2.11
