--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,13 @@ pytest-cov==2.2.0
 # https://pypi.python.org/pypi/flake8/2.5.4
 flake8==2.5.4
 
-# SciPy: a ecosystem of open-source software for mathematics, science, and engineering.
-# https://pypi.python.org/pypi/scipy/0.18.0rc2
-scipy==0.18.0
+# NumPy: array processing for numbers, strings, records, and objects.
+# https://pypi.python.org/pypi/numpy
+numpy==1.11.1
+
+# Unofficial OpenCV packages for Python
+# https://pypi.python.org/pypi/opencv-python
+opencv-python==3.1.0.3
 
 # Python video editing module: cuts, concatenations, custom effects
 # https://pypi.python.org/pypi/moviepy
